2007-10-24 10:01 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d: Add Java generics and annotations.

2007-10-16 17:02 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMViewer.java: Triangle.vertex is
	now an AbstractVertex array in jcae.jar.

2007-09-19 16:20 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMBehavior.java: Replace proprietary
	com.sun.jmx.remote.util.CacheMap by an array of SoftReference.

2007-09-06 10:07 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMViewer.java: Remove all
	  meshOEMM(OEMM) methods and keep only meshOEMM(Mesh).

2007-09-04 14:21 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMBehavior.java: Modify ViewHolder inner
	class to display total number of triangles in displayed fine mesh.

2007-08-31 14:30  Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/cad/ViewableCAD.java
	  src/org/jcae/viewer3d/fe/ViewableFE.java: Fix typos, replace
	  hightLight by highlight in all method names.

2007-08-31 13:58 Jan Kozusznik <jan.kozusznik@vsb.cz>

	* src/org/jcae/viewer3d/FPSBehavior.java: Fix call to
	firePropertyChangeListenerPropertyChange().
	* src/org/jcae/viewer3d/OEMMViewer.java: Do not build mesh
	adjacency by default.  Minor changes in meshCoord() to
	handle non-readable triangles.
	* src/org/jcae/viewer3d/bg/ViewableBG.java: New highlight()
	method.
	* src/org/jcae/viewer3d/OEMMBehavior.java: Many changes to implement
	LOD with 2 levels (fine and coarse meshes).

2007-07-16 11:43  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/post/TextureFitter.java,
	  src/org/jcae/viewer3d/test/TextureFitterTest.java: Allows
	  disabling projection normalisation. Reenable mipmapping.

2007-07-03 08:06  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/View.java: more fixes concerning